# melchior

./: .gitignore  Gruntfile.js  LICENSE  README.md  install  package.json  test.html  userdefined.core  userdefined.hi  userdefined.hs  userdefined.html  userdefined.js
Melchior/: .gitignore  Control.core  Control.hi  Control.hs  Control.hs-cpp  Control.hs~  Crypto.hs  DOM.core  DOM.hi  DOM.hs  DOM.hs~  Dom.hs  Dom.hs-cpp  Json.hs  Melchior.DOM.hs  Melchior_Control.mjs  Melchior_DOM.mjs  Mouse.hs  Sink.hs  Test.hs  Time.hs  XHR.hs  shim.js  shim.js~
Melchior/DOM/: Events.core  Events.hi  Events.hs  Events.hs~  Melchior_Dom_Events.mjs
Melchior/Data/: List.hs  String.hs  String.hs-cpp
Melchior/Dom/: Drawing.hs  Events.hs  Html.hs  Html.hs-cpp  Melchior_Dom_Selectors.mjs  Selectors.core  Selectors.hi  Selectors.hs
Melchior/EventSources/: Elements.hs  Keyboard.hs  Mouse.hs
Melchior/JS/: Canvas.js  Crypto.js  Dom.js  Events.js  Function.js  Html.js  List.js  Query.js  Selectors.js  Signals.js  Socket.js  Test.js  Time.js  Tuple.js  XHR.js  utils.js
Melchior/Remote/: Json.hs  Json.hs-cpp  XHR.hs
comparison/bobble/: index.html  note  server.js
comparison/emberjs/: .gitignore  index.html  server.js
comparison/fat/: note
comparison/fauxter/: README.md  index.html  server.js
comparison/leak/: index.html  (+2 more)
comparison/snap/: dump.rdb  snapper.cabal
comparison/snap/src/: Course.hs  Main.hs
comparison/snap/static/: application.hs  index.html
example/: README.md  index.html  server.js  sorting.html  todo.html
spec/: Selectors-spec.js  Signals-spec.js
(+328 files in other folders)
