Name:                snapper
Version:             0.1
Synopsis:            simple types
Description:         with redis
License:             BSD3
Author:              kieran
Maintainer:          kieran@kjgorman.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable snap
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    hedis,
    utf8-string,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    snap-extras               >= 0.6,
    aeson                     >= 0.6,
    time                      >= 1.0,
    transformers              >= 0.3

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
